# readmit-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.api  Dockerfile.jobs  Dockerfile.mlflow  postgres-init.sh  prometheus.yml  run_jobs.sh
docker/grafana/provisioning/dashboards/: dashboards.yml  readmit.json
docs/: MODEL_CARD.md  RUNBOOK.md
docs/superpowers/plans/: 2026-07-02-readmit-ai.md
docs/superpowers/specs/: 2026-07-02-readmit-ai-design.md
flows/: ingest_flow.py  monitor_flow.py  train_flow.py
scripts/: simulate_traffic.py
src/readmit/: config.py
src/readmit/api/: main.py  model.py  schemas.py  scoring_log.py
src/readmit/data/: clean.py  download.py  schema.py  split.py
src/readmit/features/: build.py
src/readmit/monitoring/: drift.py
src/readmit/train/: evaluate.py  explain.py  pipeline.py  promote.py
tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_train.py
