[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "readmit"
version = "0.1.0"
description = "Production-grade MLOps platform for 30-day hospital readmission risk"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Sai Saran Tottempudi"}]
dependencies = [
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pandera>=0.19",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "shap>=0.45",
    "mlflow>=2.12",
    "prefect>=3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "evidently>=0.4.30,<0.5",
    "prometheus-client>=0.20",
    "httpx>=0.27",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
